--- a/diapos/Electrotecnia.tex
+++ b/diapos/Electrotecnia.tex
@@ -1,4 +1,4 @@
-% Created 2019-10-15 mar 15:24
+% Created 2019-10-17 jue 10:59
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -63,9 +63,9 @@
 \maketitle
 
 \section{Conceptos preliminares}
-\label{sec:org24e4283}
+\label{sec:orgaed72ff}
 
-\begin{frame}[label={sec:org729fb29}]{Electricidad}
+\begin{frame}[label={sec:org70cff09}]{Electricidad}
 \begin{itemize}
 \item La electricidad es un fenómeno físico asociado al \alert{movimiento de las
 cargas eléctricas}.
@@ -79,7 +79,7 @@ Este movimiento se realiza mediante un trabajo, cuantificado por el
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgf981f12}]{Intensidad de Corriente eléctrica}
+\begin{frame}[label={sec:org7ccdcc0}]{Intensidad de Corriente eléctrica}
 \begin{itemize}
 \item \alert{Variación de la carga con el tiempo en la sección transversal de un
 conductor} \(i(t)=\frac{dq(t)}{dt}\)
@@ -89,7 +89,7 @@ es positivo para el movimiento de las cargas positivas.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7f6aa5d}]{Principio de conservación de la carga}
+\begin{frame}[label={sec:org967d697}]{Principio de conservación de la carga}
 \begin{itemize}
 \item Las lineas de corriente son cerradas (o solenoidales)
 
@@ -106,7 +106,7 @@ i_1(t) - i_2(t) + i_3(t) - i_4(t) + i_5(t) = 0
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org5eb540f}]{Tensión. Diferencia de potencial}
+\begin{frame}[label={sec:org3fe045f}]{Tensión. Diferencia de potencial}
 \begin{itemize}
 \item \alert{Trabajo realizado al mover una carga unidad entre dos puntos}.
 \end{itemize}
@@ -125,7 +125,7 @@ escribir:
 \end{align*}
 \end{frame}
 
-\begin{frame}[label={sec:org6abbb3d}]{Principio de conservación de la energía}
+\begin{frame}[label={sec:org0e0389f}]{Principio de conservación de la energía}
 \begin{itemize}
 \item La energía producida por un generador se consume por los receptores
 del circuito para producir trabajo (mecánico, químico, etc.) o
@@ -144,7 +144,7 @@ u_3(t) + u_4 (t) - u_5 (t) - u_1 (t) - u_2 (t)  = 0
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org95b70a2}]{Potencia eléctrica}
+\begin{frame}[label={sec:orgf0ddb42}]{Potencia eléctrica}
 \begin{itemize}
 \item Trabajo realizado por unidad de tiempo
 \end{itemize}
@@ -163,7 +163,7 @@ potencia (\(p(t)>0\))
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org7c058f2}]{Potencia y Energía}
+\begin{frame}[label={sec:orgac55320}]{Potencia y Energía}
 \begin{description}
 \item[{Energía}] es la capacidad para realizar un trabajo.
 
@@ -178,7 +178,7 @@ Unidades W, kW
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:org122e2ae}]{Eficiencia y Rendimiento}
+\begin{frame}[label={sec:orgac92289}]{Eficiencia y Rendimiento}
 \begin{description}
 \item[{Eficiencia}] de un proceso es la relación entre la \emph{potencia} de
 salida y la \emph{potencia} de entrada a ese proceso.
@@ -189,11 +189,11 @@ salida y la \emph{energía} de entrada a ese proceso.
 \end{frame}
 
 \section{Elementos del Circuito}
-\label{sec:org94d1f97}
+\label{sec:org81df1b5}
 \subsection{Elementos Lineales}
-\label{sec:orgd428180}
+\label{sec:org9e6364b}
 
-\begin{frame}[label={sec:org0926658}]{Generadores}
+\begin{frame}[label={sec:orgd8c20f5}]{Generadores}
 \begin{itemize}
 \item \alert{Generador de tensión}: su tensión es independiente de la corriente
 (la corriente la fija el circuito)
@@ -221,7 +221,7 @@ salida y la \emph{energía} de entrada a ese proceso.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgee3d178}]{Resistencia}
+\begin{frame}[label={sec:org53375c3}]{Resistencia}
 \begin{center}
 \includegraphics[height=0.2\textheight]{../figs/Resistencia.pdf}
 \end{center}
@@ -242,7 +242,7 @@ longitud: \(R=\rho\cdot\frac{L}{S}\)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgf843064}]{Resistencia}
+\begin{frame}[label={sec:org67b6acd}]{Resistencia}
 \begin{center}
 \includegraphics[height=0.2\textheight]{../figs/Resistencia.pdf}
 \end{center}
@@ -263,7 +263,7 @@ p(t)=R\cdot i^{2}(t)
 \end{frame}
 
 
-\begin{frame}[label={sec:orge20f17d}]{Bobina o inductancia}
+\begin{frame}[label={sec:org73c0094}]{Bobina o inductancia}
 \begin{center}
 \includegraphics[height=0.2\textheight]{../figs/Bobina.pdf}
 \end{center}
@@ -283,7 +283,7 @@ v(t)=L\cdot\frac{di(t)}{dt}
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orgcb10df4}]{Bobina o inductancia}
+\begin{frame}[label={sec:org5ec342f}]{Bobina o inductancia}
 \begin{center}
 \includegraphics[height=0.2\textheight]{../figs/Bobina.pdf}
 \end{center}
@@ -299,7 +299,7 @@ tensión.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgda79999}]{Condensador}
+\begin{frame}[label={sec:org5c56b6c}]{Condensador}
 \begin{center}
 \includegraphics[height=0.2\textheight]{../figs/Condensador.pdf}
 \end{center}
@@ -326,7 +326,7 @@ i(t)=\frac{dq(t)}{d(t)}=C\frac{du(t)}{dt}
 \end{frame}
 
 
-\begin{frame}[label={sec:org67ce163}]{Condensador}
+\begin{frame}[label={sec:org2dfdc5a}]{Condensador}
 \begin{center}
 \includegraphics[height=0.2\textheight]{../figs/Condensador.pdf}
 \end{center}
@@ -342,9 +342,9 @@ abierto.
 \end{frame}
 
 \subsection{Elementos No Lineales}
-\label{sec:org8e1efd8}
+\label{sec:org6279a4e}
 
-\begin{frame}[label={sec:org429fbf6}]{Diodo}
+\begin{frame}[label={sec:org17fd876}]{Diodo}
 \begin{center}
 \includegraphics[height=0.15\textheight]{../figs/Diodo.pdf}
 \end{center}
@@ -359,7 +359,7 @@ corriente a través de él a partir de una tensión de polarización.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org34a4c97}]{Diodo}
+\begin{frame}[label={sec:orgf5ae161}]{Diodo}
 \begin{center}
 \includegraphics[height=0.15\textheight]{../figs/Diodo.pdf}
 \end{center}
@@ -377,7 +377,7 @@ del circuito en ciertas condiciones)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd86efd7}]{Transistor}
+\begin{frame}[label={sec:org2a1da4a}]{Transistor}
 \begin{center}
 \includegraphics[height=0.3\textheight]{../figs/Transistor.pdf}
 \end{center}
@@ -394,7 +394,7 @@ tercer terminal está polarizado adecuadamente.
 \end{frame}
 
 
-\begin{frame}[label={sec:orgdffc493}]{Transistor}
+\begin{frame}[label={sec:org750ce17}]{Transistor}
 \begin{center}
 \includegraphics[height=0.3\textheight]{../figs/Transistor.pdf}
 \end{center}
@@ -411,9 +411,9 @@ control es reproducida en la salida con mayor amplitud)
 \end{frame}
 
 \subsection{Asociación de elementos pasivos}
-\label{sec:org20ceea8}
+\label{sec:org7a05210}
 
-\begin{frame}[label={sec:orge749bb5}]{Conexión en serie}
+\begin{frame}[label={sec:org031f2bb}]{Conexión en serie}
 \begin{block}{Misma corriente por todos los elementos: la tensión se reparte}
 \(R_{s}=\sum_{i}R_{i}\)
 
@@ -426,7 +426,7 @@ control es reproducida en la salida con mayor amplitud)
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org41bb683}]{Conexión en paralelo}
+\begin{frame}[label={sec:org771b296}]{Conexión en paralelo}
 \begin{block}{Misma tensión aplicada a todos los elementos: la corriente se reparte}
 \(\frac{1}{R_{p}}=\sum_{i}\frac{1}{R_{i}}\)
 
@@ -441,12 +441,12 @@ control es reproducida en la salida con mayor amplitud)
 
 
 \section{Corriente alterna sinusoidal}
-\label{sec:orge1095b6}
+\label{sec:orge76eef3}
 
 \subsection{Conceptos Fundamentales}
-\label{sec:orgcebb126}
+\label{sec:org0761f84}
 
-\begin{frame}[label={sec:org538d10f}]{Onda sinusoidal}
+\begin{frame}[label={sec:org2d7a525}]{Onda sinusoidal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/sin.pdf}
 \end{center}
@@ -468,7 +468,7 @@ y(t)=Y_{o}\cdot\sin(\omega\cdot t+\theta)
 \end{frame}
 
 
-\begin{frame}[label={sec:orgf08f150}]{Fase}
+\begin{frame}[label={sec:org19e619e}]{Fase}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/desfase.pdf}
 \end{center}
@@ -494,7 +494,7 @@ respecto a la referencia.
 \end{frame}
 
 
-\begin{frame}[label={sec:org546edfa}]{Señales en Cuadratura}
+\begin{frame}[label={sec:org3619916}]{Señales en Cuadratura}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/cuadratura.pdf}
 \end{center}
@@ -506,7 +506,7 @@ respecto a la referencia.
 \end{frame}
 
 
-\begin{frame}[label={sec:org01c0cb4}]{Valor medio y valor eficaz}
+\begin{frame}[label={sec:orgc2070eb}]{Valor medio y valor eficaz}
 \begin{block}{Valor medio}
 \[
 Y_m=\frac{1}{T}\int_{0}^{T}y(t)
@@ -522,14 +522,14 @@ Y = \sqrt{\frac{1}{T}\cdot\int_{0}^{T}y^{2}(t)}
 \]
 
 \[
-Y=\sqrt{\frac{1}{T}\cdot\int_{0}^{T}\left(Y_{o}\cdot\sin(\omega\cdot t+\theta)\right)^{2}dt}=\frac{Y_{o}}{\sqrt{2}}
+Y=\sqrt{\frac{1}{T}\cdot\int_{0}^{T}\left(Y_{o}\cdot\sin(\omega\cdot t+\theta)\right)^{2}dt}=\boxed{\frac{Y_{o}}{\sqrt{2}}}
 \]
 \end{block}
 \end{frame}
 \subsection{Cálculo Fasorial}
-\label{sec:org1eab4f8}
+\label{sec:org3bb5219}
 
-\begin{frame}[label={sec:orgcedbf10}]{Representación fasorial}
+\begin{frame}[label={sec:org83480fa}]{Representación fasorial}
 \begin{itemize}
 \item Un fasor es un \alert{número complejo} que representa una señal sinusoidal para simplificar cálculos.
 \item El \alert{módulo} del fasor es el \alert{valor eficaz}. El \alert{argumento} es la \alert{fase}.
@@ -553,7 +553,7 @@ Y=\sqrt{\frac{1}{T}\cdot\int_{0}^{T}\left(Y_{o}\cdot\sin(\omega\cdot t+\theta)\r
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org23cc28b}]{Tensión y corriente en notación fasorial}
+\begin{frame}[label={sec:org2c8d436}]{Tensión y corriente en notación fasorial}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/ondasTensionCorriente.pdf}
 \end{center}
@@ -575,7 +575,7 @@ Y=\sqrt{\frac{1}{T}\cdot\int_{0}^{T}\left(Y_{o}\cdot\sin(\omega\cdot t+\theta)\r
 \end{frame}
 
 
-\begin{frame}[label={sec:org12ccfdd}]{Impedancia: relación entre fasores de tensión y corriente}
+\begin{frame}[label={sec:orgff13985}]{Impedancia: relación entre fasores de tensión y corriente}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{align*}
@@ -613,7 +613,7 @@ Y=\sqrt{\frac{1}{T}\cdot\int_{0}^{T}\left(Y_{o}\cdot\sin(\omega\cdot t+\theta)\r
 
 
 
-\begin{frame}[label={sec:orge1d8b8d}]{Impedancia Genérica}
+\begin{frame}[label={sec:org74a3467}]{Impedancia Genérica}
 \[
 \overline{Z} = R + j X
 \]
@@ -623,7 +623,7 @@ Y=\sqrt{\frac{1}{T}\cdot\int_{0}^{T}\left(Y_{o}\cdot\sin(\omega\cdot t+\theta)\r
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org9ffb0be}]{Circuito Resistivo}
+\begin{frame}[label={sec:orgc9cce64}]{Circuito Resistivo}
 Un circuito resistivo no desfasa (\alert{tensión y corriente en fase}).
 
 \begin{center}
@@ -646,7 +646,7 @@ Un circuito resistivo no desfasa (\alert{tensión y corriente en fase}).
 \end{frame}
 
 
-\begin{frame}[label={sec:orgfc11f89}]{Circuito Inductivo puro}
+\begin{frame}[label={sec:org4d40975}]{Circuito Inductivo puro}
 Un circuito inductivo puro genera \alert{señales en cuadratura} y \alert{retrasa la corriente}.
 
 \begin{center}
@@ -669,7 +669,7 @@ Un circuito inductivo puro genera \alert{señales en cuadratura} y \alert{retras
 \end{frame}
 
 
-\begin{frame}[label={sec:orgae1598c}]{Circuito Capacitivo puro}
+\begin{frame}[label={sec:org262b118}]{Circuito Capacitivo puro}
 Un circuito capacitivo puro genera \alert{señales en cuadratura} y \alert{adelanta la corriente}.
 
 
@@ -694,7 +694,7 @@ Un circuito capacitivo puro genera \alert{señales en cuadratura} y \alert{adela
 \end{frame}
 
 
-\begin{frame}[label={sec:org85f6d85}]{Circuito Inductivo con pérdidas}
+\begin{frame}[label={sec:orga87412b}]{Circuito Inductivo con pérdidas}
 Un circuito inductivo \alert{retrasa la corriente}.
 
 \begin{center}
@@ -717,7 +717,7 @@ Un circuito inductivo \alert{retrasa la corriente}.
 \end{frame}
 
 
-\begin{frame}[label={sec:org2a0005d}]{Circuito Capacitivo con pérdidas}
+\begin{frame}[label={sec:org3423592}]{Circuito Capacitivo con pérdidas}
 Un circuito capacitivo \alert{adelanta la corriente}.
 
 \begin{center}
@@ -741,9 +741,9 @@ Un circuito capacitivo \alert{adelanta la corriente}.
 
 
 \subsection{Potencia}
-\label{sec:org0a502ee}
+\label{sec:orgeb06c92}
 
-\begin{frame}[label={sec:org34a3657}]{Circuito Resistivo}
+\begin{frame}[label={sec:orgcf4590e}]{Circuito Resistivo}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/resistivoPotencia.pdf}
 \end{center}
@@ -756,7 +756,7 @@ Un circuito capacitivo \alert{adelanta la corriente}.
   p(t) = R i^2(t) = \frac{u^2(t)}{R}
 \]
 \end{frame}
-\begin{frame}[label={sec:orgfaa38f6}]{Circuito Inductivo puro}
+\begin{frame}[label={sec:org9cdb8ad}]{Circuito Inductivo puro}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/inductivoPuroPotencia.pdf}
 \end{center}
@@ -769,7 +769,7 @@ Un circuito capacitivo \alert{adelanta la corriente}.
 \end{frame}
 
 
-\begin{frame}[label={sec:org369e15d}]{Circuito Capacitivo puro}
+\begin{frame}[label={sec:org1002c53}]{Circuito Capacitivo puro}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/capacitivoPuroPotencia.pdf}
 \end{center}
@@ -781,7 +781,7 @@ Un circuito capacitivo \alert{adelanta la corriente}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org4aa48fa}]{Circuito Inductivo con pérdidas}
+\begin{frame}[label={sec:org23fa41d}]{Circuito Inductivo con pérdidas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/inductivoPotencia.pdf}
 \end{center}
@@ -791,7 +791,7 @@ Un circuito capacitivo \alert{adelanta la corriente}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2832c9c}]{Circuito Capacitivo con pérdidas}
+\begin{frame}[label={sec:orgecd736a}]{Circuito Capacitivo con pérdidas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/capacitivoPotencia.pdf}
 \end{center}
@@ -801,28 +801,28 @@ Un circuito capacitivo \alert{adelanta la corriente}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org555b91d}]{Triángulo de Potencias}
+\begin{frame}[label={sec:orgd09e06e}]{Triángulo de Potencias}
 \begin{columns}
 \begin{column}{0.4\columnwidth}
 \begin{itemize}
 \item Potencia Activa
 \end{itemize}
 \[  
-P = U\cdot I\cdot\cos(\theta) = R \cdot I^2
+\boxed{P = U\cdot I\cdot\cos(\theta) = R \cdot I^2}
 \]
 
 \begin{itemize}
 \item Potencia Reactiva
 \end{itemize}
 \[
-Q = U\cdot I\cdot\sin(\theta) = X \cdot I^2
+\boxed{Q = U\cdot I\cdot\sin(\theta) = X \cdot I^2}
 \]
 
 \begin{itemize}
 \item Potencia Aparente
 \end{itemize}
 \[
-\overline{S} = P + jQ = \overline{U} \cdot \overline{I}^*
+\boxed{\overline{S} = P + jQ = \overline{U} \cdot \overline{I}^*}
 \]
 \[
 |S| = U \cdot I
@@ -840,7 +840,7 @@ Q = U\cdot I\cdot\sin(\theta) = X \cdot I^2
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org95ae67a}]{Potencia de elementos: Resistencia}
+\begin{frame}[label={sec:orgd35b959}]{Potencia de elementos: Resistencia}
 \[
 \theta = 0 \Rightarrow 
 \begin{cases}
@@ -856,7 +856,7 @@ Q = U\cdot I\cdot\sin(\theta) = X \cdot I^2
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org364ad61}]{Potencia de elementos: Inductancia}
+\begin{frame}[label={sec:orgc9968d4}]{Potencia de elementos: Inductancia}
 \[
 \theta = \pi/2 \Rightarrow 
 \begin{cases}
@@ -872,7 +872,7 @@ Q = U\cdot I\cdot\sin(\theta) = X \cdot I^2
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org86ccf82}]{Potencia de elementos: Condensador}
+\begin{frame}[label={sec:orgb7ea8a9}]{Potencia de elementos: Condensador}
 \[
 \theta = - \pi/2 \Rightarrow 
 \begin{cases}
@@ -888,7 +888,7 @@ Q = U\cdot I\cdot\sin(\theta) = X \cdot I^2
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7527646}]{Teorema de Boucherot}
+\begin{frame}[label={sec:orgc932e09}]{Teorema de Boucherot}
 \begin{itemize}
 \item En un circuito con múltiples elementos, la potencia aparente total es la suma de las potencias aparentes individuales.
 \end{itemize}
@@ -907,31 +907,44 @@ Q &= \sum_{i = 1}^n Q_i
 \end{align*}
 \end{frame}
 
-\begin{frame}[label={sec:org83c7945}]{Compensación de reactiva}
-\begin{itemize}
-\item El factor de potencia, \(\cos(\theta)\), representa la aportación de potencia activa dentro de la potencia aparente.
-\end{itemize}
+\begin{frame}[label={sec:org05dce7e}]{Compensación de reactiva}
+El factor de potencia, \(\cos(\theta)\), representa la aportación de potencia activa dentro de la potencia aparente.
 \[
 P = S \cos \theta
 \]
 
-\begin{itemize}
-\item Sean dos sistemas con misma tensión y potencia activa, y factores de potencia \(\cos \theta_1 > \cos \theta_2\).
+Sean dos sistemas con \alert{misma tensión y potencia activa}, y factores de potencia \(\cos \theta_1 > \cos \theta_2\).
 
-\item El sistema 2 requiere \alert{mayor sección} de cable para transportar la misma potencia activa.
-\end{itemize}
-\[
-  \left(\frac{P}{U \cos \theta_1} = I_1 \right) < \left( I_2 = \frac{P}{U \cos \theta_2}\right) 
-\]
-\begin{itemize}
-\item El sistema 2 requiere \alert{mayor potencia aparente} (generador mayor) para alimentar la misma potencia activa.
-\end{itemize}
+\begin{center}
+\includegraphics[height=0.5\textheight]{../figs/compensacionReactiva.pdf}
+\end{center}
+\end{frame}
+
+
+\begin{frame}[label={sec:org4fb8b2e}]{Compensación de reactiva}
+\begin{center}
+\includegraphics[height=0.5\textheight]{../figs/compensacionReactiva.pdf}
+\end{center}
+
+
+El sistema 2 requiere \alert{mayor potencia aparente} (generador mayor) para alimentar la misma potencia activa.
 \[
   \left(\frac{P}{\cos \theta_1} = S_1 \right) < \left( S_2 = \frac{P}{\cos \theta_2}\right) 
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org61140ca}]{Compensación de reactiva}
+\begin{frame}[label={sec:orgf29f66e}]{Compensación de reactiva}
+\begin{center}
+\includegraphics[height=0.5\textheight]{../figs/compensacionReactiva.pdf}
+\end{center}
+
+El sistema 2 requiere \alert{mayor sección} de cable para transportar la misma potencia activa.
+\[
+  \left(\frac{P}{U \cos \theta_1} = I_1 \right) < \left( I_2 = \frac{P}{U \cos \theta_2}\right) 
+\]
+\end{frame}
+
+\begin{frame}[label={sec:org10a2a68}]{Compensación de reactiva}
 \begin{itemize}
 \item Comúnmente, el factor de potencia es \alert{inductivo} (máquinas eléctricas
 industriales).
@@ -944,7 +957,7 @@ potencia reactiva.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7ac5e23}]{Compensación de reactiva}
+\begin{frame}[label={sec:org58d53e4}]{Compensación de reactiva}
 \begin{itemize}
 \item Sea una carga de potencia activa \(P\) y potencia reactiva \(Q\). Supongamos que se desea mejorar el factor de potencia a \(\cos \theta' > \cos \theta\):
 \end{itemize}
@@ -962,15 +975,15 @@ potencia reactiva.
 \]
 
 \[
-C = \frac{P (\tan \theta - \tan \theta')}{\omega U^2}
+\boxed{C = \frac{P (\tan \theta - \tan \theta')}{\omega U^2}}
 \]
 \end{frame}
 
 
 \subsection{Trifásica}
-\label{sec:org700b085}
+\label{sec:orgbf5ca2b}
 
-\begin{frame}[label={sec:org1fed369}]{Motivación de los sistemas trifásicos}
+\begin{frame}[label={sec:orga50b904}]{Motivación de los sistemas trifásicos}
 \begin{itemize}
 \item La potencia instantánea de un sistema monofásico es pulsante. En un
 sistema trifásico la potencia instantánea es constante, evitando
@@ -981,13 +994,13 @@ necesaria es un 25\% en un trifásico que en un monofásico.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgba1426f}]{Generación de un sistema trifásico}
+\begin{frame}[label={sec:orge9ac39a}]{Generación de un sistema trifásico}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TensionesTrifasica.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org71589d3}]{Receptores}
+\begin{frame}[label={sec:org84c45e6}]{Receptores}
 \begin{itemize}
 \item \alert{Tensión simple o de fase}: la existente entre una fase y el neutro.
 \item \alert{Tensión compuesta o de línea} (por defecto): la existente entre dos fases.
@@ -997,7 +1010,7 @@ necesaria es un 25\% en un trifásico que en un monofásico.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb1ba865}]{Fase y línea}
+\begin{frame}[label={sec:org4105288}]{Fase y línea}
 \begin{block}{Receptor en Estrella (cuatro hilos, 3F+1N)}
 \(V_{L}=\sqrt{3}\cdot V_{F}\) 
 
@@ -1010,7 +1023,7 @@ necesaria es un 25\% en un trifásico que en un monofásico.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org5b6ed49}]{Fase y línea}
+\begin{frame}[label={sec:orgfab3d17}]{Fase y línea}
 \begin{block}{Receptor en Estrella (cuatro hilos, 3F+1N)}
 \(V_{L}=\sqrt{3}\cdot V_{F}\) 
 
@@ -1023,7 +1036,7 @@ necesaria es un 25\% en un trifásico que en un monofásico.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgfcecf27}]{Fase y línea}
+\begin{frame}[label={sec:orgdee2228}]{Fase y línea}
 \begin{block}{Receptor en Triangulo (tres hilos, 3F)}
 \(V_{L}=V_{F}\) 
 
@@ -1036,7 +1049,7 @@ necesaria es un 25\% en un trifásico que en un monofásico.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org8b0eeaf}]{Compensación de Reactiva}
+\begin{frame}[label={sec:org7eeea4b}]{Compensación de Reactiva}
 Para mejorar el factor de potencia en un sistema trifásico equilibrado se deben emplear \alert{tres condensadores conectados en triángulo}:
 
 \[
@@ -1045,9 +1058,9 @@ Para mejorar el factor de potencia en un sistema trifásico equilibrado se deben
 \end{frame}
 
 \section{Recursos}
-\label{sec:orgfc2e17f}
+\label{sec:orgd051dd8}
 
-\begin{frame}[label={sec:org839add7}]{Bibliografía}
+\begin{frame}[label={sec:org40ec3bd}]{Bibliografía}
 \begin{itemize}
 \item \alert{Fraile Mora, J.}: \emph{Circuitos Eléctricos}. Ed. Prentice Hall.
 
